# EpistemicUncertaintyRL

./: .gitignore  README.md  main.py  main_gymnax.py  pyproject.toml  run_all.py
agents/: __init__.py  drnd_agent.py  drnd_ppo_agent.py  epsilon_greedy_agent.py  epsilon_greedy_agent_deepsea.py  epsilon_greedy_gymnax_agent.py  rnd_agent.py  rnd_agent_deepsea.py  rnd_gymnax_agent.py
configs/: drnd.yaml  drnd_ppo.yaml  epsilon_greedy.yaml  rnd.yaml  rnd_montezuma.yaml  sweep_greedy.yaml  sweep_rnd.yaml  sweep_rnd_deep.yaml
configs/Acrobot/: epsilon_greedy.yaml  rnd.yaml
configs/CartPole/: epsilon_greedy.yaml  rnd.yaml
configs/DeepSea/: epsilon_greedy.yaml  rnd.yaml
configs/MNISTBandit/: epsilon_greedy.yaml  rnd.yaml
environments/: make_env.py
exploration/: drnd.py  drnd_ppo.py  rnd.py  rnd_deepsea.py  rnd_gymnax.py
networks/: drnd_network.py  drnd_ppo_network.py  q_network.py  rnd_networks.py
utils/: gymnax_wrapper.py  replay_buffer.py  state_hasher.py
videos/CartPole-v1_0x738f/: rl-video-step-99999.meta.json
videos/CartPole-v1_0xd55d/: rl-video-step-49999.meta.json
videos/MountainCar-v0_0x73c2/: rl-video-step-49999.meta.json  rl-video-step-99999.meta.json
wandb/: latest-run
wandb/run-20250505_161921-ffkcxun8/: run-ffkcxun8.wandb
wandb/run-20250505_170926-1sze0d42/: run-1sze0d42.wandb
wandb/run-20250505_172039-er3tean7/: run-er3tean7.wandb
wandb/run-20250505_172418-ca774o0a/: run-ca774o0a.wandb
wandb/run-20250505_172919-e04xi80t/: run-e04xi80t.wandb
wandb/run-20250505_173129-g9epbpyq/: run-g9epbpyq.wandb
(+166 files in other folders)
