[project]
name = "nanodqn"
version = "0.1.0"
description = "Reimplementation of CleanRL DQN in JAX+Equinox and jaxtyping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wandb",
    "flax",
    "jax[cuda12]", # nvidia support by default
    "optax",
    "gymnax",
    "scipy",
    "gymnasium[classic-control,atari,accept-rom-license]<1",
    "numpy<2",
    "tyro",
    "tqdm",
    "moviepy",
    "chex>=0.1.89",
    "opencv-python>=4.11.0.86",
]
